--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: JKAN
-greeting: Welcome to JKAN
-description: A lightweight, backend-free open data portal, powered by Jekyll.
+greeting: DataScientia Catalog Template 
+description: This is a template, provided by DataScientia Foundation, for the creation of a Data Catalog to be part of the DataScientia community.
 baseurl: /jkan
 logo: /img/jkan.png
 
