--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: JKAN
 greeting: Welcome to JKAN
 description: A lightweight, backend-free open data portal, powered by Jekyll.
 baseurl: /jkan
-logo: /img/data-scientia-white.png
+logo: /img/LTemplate-noBG.png
 
 # Site theme
 jkan_theme: Default
