--- a/_data/categories.yml
+++ b/_data/categories.yml
@@ -1,4 +1,4 @@
-- name: Education
+- name: Digital University
   logo: /img/categories/education.svg
   logo_credit: Sergey Patutin from the Noun Project
   featured: true
