type of resources added

--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-title: JKAN
+title: JKAN-Template
 greeting: DataScientia Catalog Template 
 description: This is a template, provided by DataScientia Foundation, for the creation of a Data Catalog to be part of the DataScientia community.
 baseurl: /jkan
