--- a/_data/schemas/default.yml
+++ b/_data/schemas/default.yml
@@ -21,15 +21,58 @@ dataset_fields:
     form_template: form/category.html
     display_template: display/category.html
     datajson: category
+  - field_name: type
+    label: Resource Type
+    datajson: type
   - field_name: maintainer
     label: Maintainer
     datajson: contactPoint.fn
   - field_name: maintainer_email
     label: Maintainer Email
     datajson: contactPoint.hasEmail
-  - field_name: tags
-    label: Tags
-    datajson: tags
+  - field_name: creator
+    label: Creator
+    datajson: creator
+  - field_name: creator_email
+    label: Creator Email
+    datajson: creator_email
+  - field_name: publisher
+    label: Publisher
+    datajson: publisher
+  - field_name: owner
+    label: Owner
+    datajson: owner
+  - field_name: validator
+    label: Validator
+    datajson: validator
+  - field_name: keyword
+    label: Keyword
+    datajson: keyword
+  - field_name: domain
+    label: Domain
+    datajson: domain
+  - field_name: language
+    label: Language
+    datajson: language
+  - field_name: min_longitude
+    label: Min Longitude
+    datajson: min_longitude
+  - field_name: max_longitude
+    label: Max Longitude
+    datajson: max_longitude
+  - field_name: min_latitude
+    label: Min Latitude
+    datajson: min_latitude
+  - field_name: max_latitude
+    label: Max Latitude
+    datajson: max_latitude
+  - field_name: temporal_extent
+    label: Temporal Extent
+    datajson: temporal_extent
+  - field_name: generating_activity
+    label: Generating Activity
+    datajson: generating_activity
+
 
 resource_fields:
   - field_name: name
@@ -53,6 +96,28 @@ resource_fields:
       - kmz
       - shp
       - xml
+      - zip
+  - field_name: reference_ontology
+    label: Reference Ontology
+    datajson: distribution.reference_ontology
+  - field_name: reference_original_dataset
+    label: Reference Original Dataset
+    datajson: distribution.reference_original_dataset
+  - field_name: reference_domain_language
+    label: Reference Domain Language
+    datajson: distribution.reference_domain_language
+  - field_name: size
+    label: Size
+    datajson: distribution.size
+  - field_name: issue_datetime
+    label: Issue Date Time
+    datajson: issue_datetime
+  - field_name: modification_datetime
+    label: Modification Date Time
+    datajson: modification_datetime
+  - field_name: note
+    label: Note
+    datajson: distribution.note
 
 organization_fields:
   - field_name: title
@@ -72,3 +137,11 @@ category_fields:
   - field_name: featured
     label: Featured on Homepage
     form_template: form/checkbox.html
+
+type_fields:
+  - field_name: title
+    label: Title
+  - field_name: description
+    label: Description
+  - field_name: logo
+    label: Logo
